set public dev server

--- a/public/launch.html
+++ b/public/launch.html
@@ -215,7 +215,7 @@
         <tiro-form-filler
           id="report-form"
           questionnaire="http://templates.tiro.health/templates/aa87c115c40149e98faba070cacb15c9"
-          sdc-endpoint-address="http://127.0.0.1:8000/fhir/r5"
+          sdc-endpoint-address="https://sdc-service-dev-35032072625.europe-west1.run.app/fhir/r5"
         />
       </div>
     </div>
