--- a/public/launch.html
+++ b/public/launch.html
@@ -326,6 +326,16 @@
         demoTitle.textContent = "Pathology Report";
         demoSubtitle.textContent = "Tiro.health Pathology Demo";
         demoIcon.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="text-blue-600 dark:text-blue-400"><path d="M10 2v7.527a2 2 0 0 1-.211.896L4.72 20.55a1 1 0 0 0 .9 1.45h12.76a1 1 0 0 0 .9-1.45l-5.069-10.127A2 2 0 0 1 14 9.527V2"/><path d="M8.5 2h7"/><path d="M7 16h10"/></svg>`;
+      } else if (demoType === "ehr") {
+        const demoHeader = document.getElementById("demo-header");
+        const demoIcon = document.getElementById("demo-header-icon");
+        const demoTitle = document.getElementById("demo-header-title");
+        const demoSubtitle = document.getElementById("demo-header-subtitle");
+        demoHeader.classList.remove("hidden");
+        demoHeader.classList.add("flex");
+        demoTitle.textContent = "Structured Report";
+        demoSubtitle.textContent = "Tiro.health EHR Demo";
+        demoIcon.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="text-blue-600 dark:text-blue-400"><path d="M8 2v4"/><path d="M16 2v4"/><rect width="18" height="18" x="3" y="4" rx="2"/><path d="M3 10h18"/><path d="M8 14h8"/><path d="M8 18h5"/></svg>`;
       }
 
       // Build Parameters resource, always including questionnaire
@@ -356,6 +366,10 @@
       // ============================================
       // Utility Functions
       // ============================================
+      const patientGiven = (params.get("patientGiven") || "").trim();
+      const patientFamily = (params.get("patientFamily") || "").trim();
+      const patientBirthDate = (params.get("patientBirthDate") || "").trim();
+
       const launchContext = {
         custom: paramResource,
         patient: {
@@ -365,6 +379,17 @@
               value: params.get("patientId") || "example-patient-id",
             },
           ],
+          ...(patientGiven || patientFamily
+            ? {
+                name: [
+                  {
+                    ...(patientFamily ? { family: patientFamily } : {}),
+                    ...(patientGiven ? { given: [patientGiven] } : {}),
+                  },
+                ],
+              }
+            : {}),
+          ...(patientBirthDate ? { birthDate: patientBirthDate } : {}),
         },
       };
       const patientId =
